--- a/WebContent/public/queryContainer/queryContainer.html
+++ b/WebContent/public/queryContainer/queryContainer.html
@@ -19,12 +19,15 @@
 		
 		<div id="query-master">
 		
+			<!-- 
 			<form action="primary.jsp" method="post">
+			-->
+			<form action="formservice" method="post">
 				<div id="query-text">
 					<div class="text-center wrap_title">
 						<span class="inputWithButton">
 							<input type="text" ng-model="query" ng-attr-placeholder="{{ queryPlaceholder }}" name="query" id="query">
-							<button type="submit" id="btn-search"><b>Hello</b></button>
+							<button type="submit" id="btn-search"><b>Search</b></button>
 						</span>   
 					</div>
 				</div>
