added tweet layout

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -33,7 +33,7 @@
 	<nav id="home_navbar" class="navbar navbar-custom navbar-fixed-top" role="navigation">
 		<div class="container">		
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#/queryContainer">OKE</a>
+				<a class="navbar-brand" href="#/queryContainer">TwitterServlet</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right navbar-ex1-collapse">
@@ -53,6 +53,10 @@
 	<script src="public/queryContainer/queryContainer.js"></script>
 	<script src="public/whatisit/whatisit.js"></script>
 	<script src="public/contact/contact.js"></script>
+	<script src="public/link2/link2.js"></script>
+	<script src="public/link3/link3.js"></script>
+	<script src="public/preview/preview.js"></script>
+	<script src="public/primary/primary.js"></script>
 	
 </body>
 </html>
